gallery gap fix.css

--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ hero .demo-button:hover {
     margin-top: 50px;
     display: flex;
     justify-content: center;
-    gap: 3s0px;
+    gap: 30px;
 }
 
 .our_custommers .custommer{
